--- a/src/ads-carousel/ads-carousel.less
+++ b/src/ads-carousel/ads-carousel.less
@@ -4,11 +4,11 @@
     border-radius: 10px;
 }
 
-.carousel-item {
+.carouselItem {
     height: 180px;
 } 
 
-.carousel-item img {
+.carouselItem img {
     min-width: 100%;
     max-height:150%;
     object-fit: cover;
