--- a/src/left-panel/left-panel.less
+++ b/src/left-panel/left-panel.less
@@ -1,31 +1,54 @@
-
 .playButton {
   position: absolute;
-  width:250px;
-  bottom:80px;
+  width: 250px;
+  bottom: 80px;
+  border-radius: 0;
 }
 
 .progressBar {
   position: absolute;
-  width:80%;
-  bottom:80px;
-  background: rgba(0,0,0,.4);
+  width: 80%;
+  bottom: 80px;
+  background: rgba(0, 0, 0, .4);
   filter: contrast(100%);
-  height:48px;
+  height: 48px;
 }
 
 .leftPanel {
-    text-align: left;
-    height:600px;
+  text-align: left;
+  height: 600px;
 }
 
 .leftNavBar {
-  font-size: 12px;  
+  font-size: 12px;
   margin-top: 20px;
-  background: rgba(0,0,0,.4);
+  background: rgba(0, 0, 0, .4);
   filter: contrast(100%);
-  padding: 5px 5px 5px 5px;
   text-align: center;
-  border-radius: 5px;
-  width:300px;
+  border-radius: 4px;
+  width: 300px;
+  color: darkgrey;
+
+  a {
+    color: white;
+  }
+
+  ul {
+    padding-inline-start: 0;
+    list-style: none;
+    display: inline-block;
+    text-align: left;
+    margin-bottom: 0;
+    padding: 0px 0px 2px 0px;
+    li {
+      display: inline-block;
+    }
+
+    li+li:before {
+      content: "|";
+      font-size: large;
+      margin-left: 5px;
+      margin-right: 5px;
+    }
+  }
 }
