--- a/src/login-component/login-component.less
+++ b/src/login-component/login-component.less
@@ -1,30 +1,26 @@
-.menu ul li{
-  display: inline-block;
-}
-
 .loginLogo {
   -webkit-app-region: no-drag;
   font-size: 35px;
-  color:grey;
-  margin-right:5px;
+  color: grey;
+  margin-right: 5px;
   text-align: center;
-  display:inline-block;
-  z-index:10000;
-}
+  display: inline-block;
+  z-index: 10000;
 
-.loginLogo:hover, .loginLogo:hover {
-  color: darkgrey;
+  &:hover {
+    color: darkgrey;
+  }
 }
 
 .userId {
-  display:inline;
+  display: inline;
   align-content: center;
 }
 
 .login {
-  display:inline-block;
-  width:160px;
-  margin-top:10px;
+  display: inline-block;
+  width: 160px;
+  margin-top: 10px;
 }
 
 .loginMenu {
@@ -32,22 +28,22 @@
   background-position: center top;
   background-repeat: no-repeat;
   background-size: 120%;
-  width:960px;
-  height:680px;
+  width: 960px;
+  height: 680px;
   overflow: hidden;
 }
 
 .loginButton {
-  width:100%;
+  width: 100%;
 }
 
 .logoutMenu {
-  padding-left:50px;
-  padding-top:50px;
-  color:grey;
-  margin-left:-40px;
-  margin-top:-50px;
-  height:auto;
-  width:170px;
-  background:rgba(0,0,0,.7);
+  padding-left: 50px;
+  padding-top: 50px;
+  color: grey;
+  margin-left: -40px;
+  margin-top: -50px;
+  height: auto;
+  width: 170px;
+  background: rgba(0, 0, 0, .7);
 }
