--- a/src/menu-bar/menu-bar.less
+++ b/src/menu-bar/menu-bar.less
@@ -1,57 +1,54 @@
-
 .menu {
   -webkit-app-region: drag;
   width: 100%;
   height: 60px;
-  margin-bottom:40px;
-  background: rgba(0,0,0,.4);
+  margin-bottom: 40px;
+  background: rgba(0, 0, 0, .4);
   filter: contrast(100%);
   z-index: 9999;
   position: relative;
-}
 
-.menu ul {
-list-style-type: none;
+  ul {
+    list-style-type: none;
+
+    li {
+      display: inline-block;
+    }
+  }
 }
 
 .optionLogo {
--webkit-app-region: no-drag;
-font-size: 35px;
-color:darkgrey;
-margin-right:5px;
-text-align: center;
-float:right;
-margin-right:10px;
-}
+  -webkit-app-region: no-drag;
+  font-size: 35px;
+  color: darkgrey;
+  margin-right: 5px;
+  text-align: center;
+  float: right;
+  margin-right: 10px;
 
-.optionLogo:hover, .closeLogo:hover {
-color: darkgrey;
+  &:hover {
+    color: darkgrey
+  }
 }
 
 .closeLogo {
--webkit-app-region: no-drag;
-font-size: 35px;
-color:grey;
-margin-right:5px;
-text-align: center;
-float:right;
-margin-right:10px;
-}
+  -webkit-app-region: no-drag;
+  font-size: 35px;
+  color: grey;
+  margin-right: 5px;
+  text-align: center;
+  float: right;
+  margin-right: 10px;
 
-.menu ul li{
-display: inline-block;
-}
-
-.status {
-padding-top:5px;
-display: inline;
-color:grey;
+  &:hover {
+    color: darkgrey
+  }
 }
 
 .smallLogo {
-padding: 0 20px 0 0;
-margin-top:10px;
-margin-bottom:10px;
-width:80px;
-height:60px;
+  padding: 0 20px 0 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 80px;
+  height: 60px;
 }
