--- a/src/news-panel/news-panel.less
+++ b/src/news-panel/news-panel.less
@@ -1,27 +1,27 @@
 .newsPanel {
-    font-size: 12px;  
-    background: rgba(0,0,0,.4);
+    font-size: 12px;
+    background: rgba(0, 0, 0, .4);
     filter: contrast(100%);
     padding: 5px 5px 5px 5px;
-    width:350px;
+    width: 350px;
     margin-bottom: 40px;
-}
 
-.newsPanel ul {
-    list-style-type: none;
-    margin-left:-20px;
+    ul {
+        list-style-type: none;
+        margin-left: -20px;
+    }
 }
 
 .statusPanel {
-    font-size: 12px;  
-    background: rgba(0,0,0,.4);
+    font-size: 12px;
+    background: rgba(0, 0, 0, .4);
     filter: contrast(100%);
     padding: 5px 5px 5px 5px;
-    width:350px;
+    width: 350px;
     margin-bottom: 40px;
 }
 
 .statusPanel ul {
     list-style-type: none;
-    margin-left:-20px;
+    margin-left: -20px;
 }
