--- a/src/App.less
+++ b/src/App.less
@@ -3,13 +3,18 @@
 .App {
   text-align: center;
   background-image: url("background2.jpg");
-  background-position: center top;
+  background-position: left top;
   background-repeat: no-repeat;
-  background-size: 120%;
+  background-size: cover;
   width:960px;
   height:680px;
   overflow: hidden;
-  color:white;
+  color:lightgray;
+  text-shadow:
+  -1px -1px 0 #000,  
+   1px -1px 0 #000,
+   -1px 1px 0 #000,
+    1px 1px 0 #000;
   user-select: none;
   text-align: left;
 }
