--- a/src/news-panel/news-panel.less
+++ b/src/news-panel/news-panel.less
@@ -1,6 +1,6 @@
 .newsPanel {
     font-size: 12px;
-    background: rgba(0, 0, 0, .4);
+    background: rgba(0, 0, 0, .6);
     filter: contrast(100%);
     padding: 5px 5px 5px 5px;
     width: 350px;
@@ -10,11 +10,15 @@
         list-style-type: none;
         margin-left: -20px;
     }
+
+    a {
+        color: lightblue;
+    }
 }
 
 .statusPanel {
     font-size: 12px;
-    background: rgba(0, 0, 0, .4);
+    background: rgba(0, 0, 0, .6);
     filter: contrast(100%);
     padding: 5px 5px 5px 5px;
     width: 350px;
