--- a/src/ads-carousel/ads-carousel.less
+++ b/src/ads-carousel/ads-carousel.less
@@ -2,14 +2,29 @@
     width:350px;
     overflow:hidden;
     border-radius: 10px;
+    a {
+        color: lightblue;
+    }
+}
+:global(.carousel-caption) {
+    background: rgba(0, 0, 0, .4);
+    width:100%;
+    right:0;
+    bottom: 0;
+    left:0;
+    padding-bottom: 20px;
+    padding-top: 0px;
+    font-size: 18px;
+}
+:global(.carousel-indicators) {
+    bottom: -20px;
 }
 
 .carouselItem {
-    height: 180px;
+    height: 200px;
 } 
 
 .carouselItem img {
-    min-width: 100%;
     max-height:150%;
     object-fit: cover;
 }
