--- a/src/left-panel/left-panel.less
+++ b/src/left-panel/left-panel.less
@@ -9,7 +9,7 @@
   position: absolute;
   width: 80%;
   bottom: 80px;
-  background: rgba(0, 0, 0, .4);
+  background: rgba(0, 0, 0, .6);
   filter: contrast(100%);
   height: 48px;
 }
@@ -17,15 +17,17 @@
 .leftPanel {
   text-align: left;
   height: 600px;
+  margin-top: -20px;
 }
 
 .leftNavBar {
   font-size: 12px;
-  margin-top: 20px;
-  background: rgba(0, 0, 0, .4);
+  margin-top: 50px;
+  background: rgba(0, 0, 0, .6);
   filter: contrast(100%);
   text-align: center;
   border-radius: 4px;
+  margin-left: 50px;
   width: 300px;
   color: darkgrey;
 
@@ -40,6 +42,7 @@
     text-align: left;
     margin-bottom: 0;
     padding: 0px 0px 2px 0px;
+
     li {
       display: inline-block;
     }
