--- a/src/login-component/login-component.less
+++ b/src/login-component/login-component.less
@@ -10,6 +10,10 @@
   &:hover {
     color: darkgrey;
   }
+
+  &.online {
+    color: #007bff
+  }
 }
 
 .userId {
@@ -25,9 +29,8 @@
 
 .loginMenu {
   background-image: url("../background2.jpg");
-  background-position: center top;
-  background-repeat: no-repeat;
-  background-size: 120%;
+  background-position: left top;
+  background-size: cover;
   width: 960px;
   height: 680px;
   overflow: hidden;
