--- a/src/left-panel/left-panel.less
+++ b/src/left-panel/left-panel.less
@@ -15,6 +15,11 @@
 }
 
 .leftPanel {
+  p {
+    font-weight: bold;
+    font-size: 14px;
+  }
+
   text-align: left;
   height: 600px;
   margin-top: -20px;
