Fix launcher for new api

--- a/src/menu-bar/menu-bar.less
+++ b/src/menu-bar/menu-bar.less
@@ -20,7 +20,7 @@
 .optionLogo {
   -webkit-app-region: no-drag;
   font-size: 35px;
-  color: darkgrey;
+  color: grey;
   margin-right: 5px;
   text-align: center;
   float: right;
